examples/test/conf/HTTPRoute/Backend/LBConsistentHash/Endpoints_default_lb-ch.yaml
# Endpoints 资源 - ConsistentHash EP 模式测试
apiVersion: v1
kind: Endpoints
metadata:
  name: lb-ch-service
  namespace: edgion-default
subsets:
  - addresses:
      - ip: "127.0.0.1"
      - ip: "127.0.0.2"
      - ip: "127.0.0.3"
    ports:
      - name: http
        port: 9999
        protocol: TCP
