examples/test/conf/HTTPRoute/Backend/LBConsistentHash/EndpointSlice_default_lb-ch-multi-2.yaml
#  Slice  - Slice 2 (2 endpoints)
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: lb-ch-multi-2
  namespace: edgion-default
  labels:
    kubernetes.io/service-name: lb-ch-multi-service
addressType: IPv4
ports:
  - name: http
    port: 30001
    protocol: TCP
endpoints:
  - addresses:
      - "127.0.0.3"
    conditions:
      ready: true
  - addresses:
      - "127.0.0.4"
    conditions:
      ready: true
