examples/test/conf/HTTPRoute/Backend/LBConsistentHash/EndpointSlice_default_lb-ch.yaml
#  EndpointSlice, 3  endpoints - ConsistentHash 
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: lb-ch-single
  namespace: edgion-default
  labels:
    kubernetes.io/service-name: lb-ch-service
addressType: IPv4
ports:
  - name: http
    port: 30001
    protocol: TCP
endpoints:
  - addresses:
      - "127.0.0.1"
    conditions:
      ready: true
  - addresses:
      - "127.0.0.2"
    conditions:
      ready: true
  - addresses:
      - "127.0.0.3"
    conditions:
      ready: true
