examples/test/conf/HTTPRoute/Backend/LBConsistentHash/Gateway.yaml
# LB ConsistentHash  Gateway
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: lb-ch-gateway
  namespace: edgion-test
  annotations:
    # Enable metrics test mode for LB distribution verification
    edgion.io/metrics-test-key: "lb-ch-test"
    edgion.io/metrics-test-type: "lb"
spec:
  gatewayClassName: public-gateway
  listeners:
    - name: http
      protocol: HTTP
      port: 31121
