examples/test/conf/HTTPRoute/Backend/LBConsistentHash/HTTPRoute_default_lb-ch-arg.yaml
# ConsistentHash (Query Arg) + EndpointSlice 
#  user_id query argument 
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lb-ch-arg
  namespace: edgion-default
  annotations:
    edgion.io/max-retries: "0"
spec:
  parentRefs:
    - name: lb-ch-gateway
      namespace: edgion-test
  hostnames:
    - "lb-ch-arg.example.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /test
      timeouts:
        request: 2s
        backendRequest: 1s
      backendRefs:
        - name: lb-ch-service
          port: 8080
          filters:
            - type: ExtensionRef
              extensionRef:
                group: edgion.io
                kind: LBPolicyConsistentHash
                name: arg.user_id
