examples/test/conf/HTTPRoute/Backend/LBConsistentHash/Service_default_lb-ch.yaml
# LB ConsistentHash 测试服务（单 slice / EP 场景共用）
apiVersion: v1
kind: Service
metadata:
  name: lb-ch-service
  namespace: edgion-default
spec:
  ports:
    - port: 8080
      protocol: TCP
